components & routing & state management

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "start:yonatan": "ng serve -o --port 8080"
   },
   "private": true,
   "dependencies": {
