--- a/angular.json
+++ b/angular.json
@@ -33,6 +33,12 @@
             "styles": [
               "src/styles.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/assets/styles"
+              ]
+
+            },
             "scripts": []
           },
           "configurations": {
