--- a/angular.json
+++ b/angular.json
@@ -34,6 +34,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss"
             ],
             "stylePreprocessorOptions": {
@@ -109,6 +110,140 @@
             ],
             "styles": [
               "src/styles.scss"
+            ],
+            "scripts": []
+          }
+        }
+      }
+    },
+    "academy-style": {
+      "projectType": "library",
+      "root": "projects/academy-style",
+      "sourceRoot": "projects/academy-style/src",
+      "prefix": "ac",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "project": "projects/academy-style/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/academy-style/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/academy-style/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/academy-style/src/test.ts",
+            "tsConfig": "projects/academy-style/tsconfig.spec.json",
+            "karmaConfig": "projects/academy-style/karma.conf.js"
+          }
+        }
+      }
+    },
+    "back-offece": {
+      "projectType": "application",
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        },
+        "@schematics/angular:application": {
+          "strict": true
+        }
+      },
+      "root": "projects/back-offece",
+      "sourceRoot": "projects/back-offece/src",
+      "prefix": "app",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/back-offece",
+            "index": "projects/back-offece/src/index.html",
+            "main": "projects/back-offece/src/main.ts",
+            "polyfills": "projects/back-offece/src/polyfills.ts",
+            "tsConfig": "projects/back-offece/tsconfig.app.json",
+            "inlineStyleLanguage": "scss",
+            "assets": [
+              "projects/back-offece/src/favicon.ico",
+              "projects/back-offece/src/assets"
+            ],
+            "styles": [
+              "projects/back-offece/src/styles.scss"
+            ],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kb",
+                  "maximumError": "1mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "projects/back-offece/src/environments/environment.ts",
+                  "with": "projects/back-offece/src/environments/environment.prod.ts"
+                }
+              ],
+              "outputHashing": "all"
+            },
+            "development": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "vendorChunk": true,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "configurations": {
+            "production": {
+              "browserTarget": "back-offece:build:production"
+            },
+            "development": {
+              "browserTarget": "back-offece:build:development"
+            }
+          },
+          "defaultConfiguration": "development"
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "back-offece:build"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/back-offece/src/test.ts",
+            "polyfills": "projects/back-offece/src/polyfills.ts",
+            "tsConfig": "projects/back-offece/tsconfig.spec.json",
+            "karmaConfig": "projects/back-offece/karma.conf.js",
+            "inlineStyleLanguage": "scss",
+            "assets": [
+              "projects/back-offece/src/favicon.ico",
+              "projects/back-offece/src/assets"
+            ],
+            "styles": [
+              "projects/back-offece/src/styles.scss"
             ],
             "scripts": []
           }
